dropdown: fix overflow
Adjust on billing and payment page.

--- a/src/theme-pagarme/checkout/index.css
+++ b/src/theme-pagarme/checkout/index.css
@@ -30,7 +30,6 @@
 
 .content {
   flex: 1;
-  overflow: hidden;
 }
 
 .darkContent {
